@@ -1,0 +1,11 @@
+Title: Inventory filters: Fixed error handling when entering invalid regexes
+Level: 1
+Component: inv
+Class: fix
+Compatible: compat
+Edition: cre
+State: unknown
+Version: 1.2.8p18
+Date: 1487924766
+
+
